chatbot-rag-ui/frontend-deployment.yaml
# openshift/frontend-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-frontend
  template:
    metadata:
      labels:
        app: rag-frontend
    spec:
      containers:
        - name: rag-frontend-container
          image: quay.io/neutron-it/rag-projet-front:latest 
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
