chatbot-rag-ui/frontend-service.yaml
# openshift/frontend-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: rag-frontend-service
spec:
  selector:
    app: rag-frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
